// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiCommentTimeline is rendered 1`] = `
<div
  class="euiCommentTimeline testClass1 testClass2"
>
  <div
    class="euiCommentTimeline__content"
  >
    <div
      class="euiCommentTimeline__icon--default euiCommentTimeline__icon--regular"
    >
      <span
        data-euiicon-type="user"
      />
    </div>
  </div>
</div>
`;

exports[`EuiCommentTimeline props timelineIcon is rendered 1`] = `
.emotion-0 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-background-size: cover;
  background-size: cover;
  text-align: center;
  vertical-align: middle;
  overflow-x: hidden;
  font-weight: 500;
  width: 40px;
  height: 40px;
  line-height: 40px;
  font-size: calc(24px * .8);
  position: relative;
  border-radius: 50%;
}

.emotion-0:after {
  display: none;
}

.emotion-0:after {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 50%;
  content: '';
  pointer-events: none;
  border: 1px solid rgba(52,55,65,0.05);
}

<div
  class="euiCommentTimeline"
>
  <div
    class="euiCommentTimeline__content"
  >
    <div
      class="euiCommentTimeline__icon--regular"
    >
      <div
        aria-label="Mario"
        class="euiAvatar euiAvatar--l euiAvatar--user emotion-0"
        role="img"
        style="background-color:#f1d86f;color:#000000"
        title="Mario"
      >
        <span
          aria-hidden="true"
        >
          M
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiCommentTimeline props type is rendered 1`] = `
<div
  class="euiCommentTimeline"
>
  <div
    class="euiCommentTimeline__content"
  >
    <div
      class="euiCommentTimeline__icon--default euiCommentTimeline__icon--update"
    >
      <span
        data-euiicon-type="dot"
      />
    </div>
  </div>
</div>
`;
